overflow issue resolved

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ h1 {
   top: 150px;
   height: 400px;
   width: 800px;
-  overflow: auto;
   text-align: center;
 }
 #ques {
